# algorithmic-languages-2-project-1

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  conanbuildinfo.cmake  conanfile.txt
include/: algebraic_operations.h  const_operation.h  operation.h
include/operation/: algebraic_operations.h  const_operation.h  operation.h  variables.h
include/parser/: expression_parser.h  simple_expression_parser.h
source/: main.cpp
